# datalad-slurm

./: .gitignore  CONTRIBUTORS  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements-devel.txt  requirements.txt  setup.py
.github/workflows/: add-changelog-snippet.yml  codespell.yml  docbuild.yml  integration_tests.yml  release.yml
_datalad_buildsupport/: setup.py
datalad_slurm/: _version.py  common.py  finish.py  reschedule.py  schedule.py
docs/source/: conf.py
runtime-evaluation/: datalad_finish_speed.ipynb  datalad_schedule_speed.ipynb
runtime-evaluation/datalad-slurm-test-09_2025-03-23T141631+0100_with_4+4_out_args/: list_of_jobs_alt.txt  list_of_jobs_normal.txt  timing_finish.txt  timing_finish_alt.txt  timing_finish_list_alt.txt  timing_schedule.txt  timing_schedule_alt.txt  timing_slurm.txt
runtime-evaluation/datalad-slurm-test-09_2025-03-28T090920+0100_with_4+8_out_args/: list_of_jobs_alt.txt  list_of_jobs_normal.txt  timing_finish.txt  timing_finish_alt.txt  timing_finish_list.txt  timing_finish_list_alt.txt  timing_schedule.txt  timing_schedule_alt.txt  timing_slurm.txt
runtime-evaluation/datalad-slurm-test-09_2025-03-29T174949+0100_with_4+0_out_args/: list_of_jobs_alt.txt  list_of_jobs_normal.txt  timing_finish.txt  timing_finish_alt.txt  timing_finish_list_alt.txt  timing_schedule.txt  timing_schedule_alt.txt  timing_slurm.txt
src/datalad_slurm/: __init__.py  _version.py  common.py  schedule.py
tests/: README.md  slurm_test06.template.sh  test_01_many_jobs.sh  test_01_many_jobs_octopus_merge.sh  test_02_conflicting_jobs.sh  test_03_output_to_same_dir.sh  test_04_conflicting_in_same_dir.sh  test_05_failed_jobs.sh  test_06_array_jobs.sh  test_07_multiple_conflicting_dirs.sh  test_08_timings.sh  test_09_timings_very_many_jobs.sh  test_10_reschedule.sh  test_11_branches.sh  test_12_octopus_merge.sh  test_13_alt_dir.sh  test_14_parallel_file_systems+monitor_caches.sh  test_14_parallel_file_systems.sh
tests/integration/: Dockerfile  docker-compose.yml
tests/integration/dlclient/: Dockerfile  entrypoint.sh  run_tests.sh  slurm.conf
tests/integration/tests/: test_job_cancel.sh  test_job_completion.sh  test_job_failure.sh  test_multiple_jobs.sh
