[build-system]
requires = [
    "setuptools >= 43.0.0", 
    "wheel",
    "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalad-slurm"
dynamic = ["version", "dependencies", "entry-points"]
authors = [
    {name = "Andreas Knüpfer", email = "a.knuepfer@hzdr.de"},
    {name = "Timothy Callow", email = "t.callow@hzdr.de"},
]
description = "A DataLad extension for HPC (slurm) systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/knuedd/datalad-slurm"
Repository = "https://github.com/knuedd/datalad-slurm.git"
Issues = "https://github.com/knuedd/datalad-slurm/issues

[project.optional-dependencies]
test = [
    "pytest >= 6.0",
    "pytest-cov >= 2.0",
]
dev = [
    "black >= 23.0",
    "flake8 >= 5.0",
    "isort >= 5.0",
    "codespell >= 2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,versioneer.py'
check-hidden = true
ignore-words-list = 'inbetween'
